Update: Toggle fixes (collapse still an issue)

--- a/acm/css/navbar.css
+++ b/acm/css/navbar.css
@@ -1,58 +1,55 @@
 /* for collapse preference. Toggle icon will appear at > 1260px */
 @media (max-width: 1120px) {
-    .collapse, .navbar-toggle {
+    /*.collapse, .navbar-toggle {
         display:block !important;
     }
     #navbar {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-}
-
-/*@media (max-width: 1120px) {
-    .collapse, .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
+        display:none !important;
     }
     .navbar-nav {
-        float: none!important;
+        float: none !important;
         margin-top: 7.5px;
     }
-    .navbar-nav>li {
-        float: none;
+    .navbar-nav > li {
+        float: none !important;
     }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
+    .navbar-nav> li> a {
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
     }
     .collapse.in{
         display:block !important;
     }
-   .navbar-nav .open .dropdown-menu {
-       position: static;
-       float: none;
-       width: auto;
-       margin-top: 0;
-       background-color: transparent;
-       border: 0;
-       -webkit-box-shadow: none;
-       box-shadow: none;
-    }
-}*/
+    .navbar-nav .open .dropdown-menu {
+       position: static !important;
+       float: none !important;
+       width: auto !important;
+       margin-top: 0 !important;
+       background-color: transparent !important;
+       border: 0 !important;
+       -webkit-box-shadow: none !important;
+       box-shadow: none !important;
+    }*/
+
+    .dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+}
 
 .navbar .navbar-collapse {
     text-align: center;
@@ -183,9 +180,9 @@ background-color: white;
 }
 
 .btn-custom {
-    margin-top: 7px;
-    margin-left: 5rem;
+    margin-top: 7px;  
     margin-right: 2rem;
+    margin-left: 2rem;
 }
 
 .navbar .navbar-nav {
@@ -220,12 +217,14 @@ background-color: white;
 
 .social-media-logo-1 {
     margin-top: 7px;
+    margin-left: 2rem;
     height: 35px;
     width: 35px;
 }
 
 .social-media-logo-2 {
     margin-top: 7px;
+    margin-right: 2rem;
     height: 35px;
     width: 35px;
 }
